--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="/style.css">
+
 </head>
+
 <body>
     
     <div>
@@ -40,7 +44,178 @@
 
     <div class="cnn10Script">
         <p>
-            <p class="cnnBodyText"><br>COY WIRE, CNN 10 ANCHOR:  What`s up superstar. Happy Friday, Friyay. I`m Coy Wire. This is CNN 10, let`s rise up, finish this week strong. <br> <br>We begin today with Boeing CEO, Dave Calhoun, acknowledging that his company made a mistake after an Alaska Airlines flight had to make an <br> <br> emergency landing last week. That flight landed shortly after takeoff from Portland, Oregon after a door plug for the Boeing 737 Max 9, actually <br> <br> detached and left a gaping hole on the side of the plane. Fortunately, none of the 177 passengers were seriously injured. <br> <br>Safety inspections are currently taking place on the grounded aircraft, but as CNN`s Ivan Rodriguez tell us questions are swirling over what mistake <br> <br> Boeing is actually admitting to.<br> <br>(BEGIN VIDEO CLIP)<br> <br>DAVE CALHOUN, BOEING CEO:  We`re going to approach this, number one, acknowledging our mistake.<br> <br>IVAN RODRIGUEZ, CNN CORRESPONDENT:  Boeing CEO, Dave Calhoun, acknowledging the company`s mistake on Tuesday. Following Friday`s emergency landing <br> <br> after a panel blew out in flight in the side of a Boeing 737 Max 9 aircraft. But according to top safety officials, it`s not clear what that <br> <br> mistake is.<br> <br>JENNIFER HOMENDY, CHAIR, U.S. NATIONAL TRANSPORTATION SAFETY BOARD:  He stated that mistakes were made and I`d like to understand what mistakes <br> <br> he`s referring to.<br> <br>RODRIGUEZ:  Jennifer Homendy, Chair of the NTSB says it`s imperative to find out what went wrong and why.<br> <br>HOMENDY:  We know what broke. We need to understand how it broke.<br> <br>RODRIGUEZ:  A Boeing company source told CNN that Boeing believes the mistake is due to, quote, "The assembly that was built up through the <br> <br> supply chain." This as the FAA grounded, most Boeing 737 Max 9 aircraft as officials investigate the cause of the detached door plug, an incident <br> <br> passengers on that flight won`t soon forget.<br> <br>KELLY BARTLETT, PASSENGER ON ALASKA AIRLINES 1282:  It was just so scary when it happened, because you just hear that loud noise, and then the plane <br> <br> filled with wind and the mask dropped and it was just something you don`t want to be experiencing on flight.<br> <br>(END VIDEOTAPE)<br> <br>WIRE:  Now, let`s turn to the small democratic island country of Taiwan, which will hold presidential and parliamentary elections this week. It`s an <br> <br> election that will be closely watched around the world, particularly by its communist neighbor, China, and even here in the United States. <br> <br>Now, there are a ton of specific details to this crucial election. So let`s head straight to our correspondent in the region Will Ripley, who explains <br> <br> why this matters to those outside Taiwan`s borders.<br> <br>(BEGIN VIDEOTAPE)<br> <br>WILL RIPLEY, CNN SENIOR INTERNATIONAL CORRESPONDENT:  On Saturday, Taiwan votes for a new president term limits mean the current president sign, when <br> <br> has to step down after eight years in power, two presidential terms. There is a lot at stake in this election. It`s being closely watched by the <br> <br> Chinese Communist Party in Beijing and by U.S. lawmakers in Washington.<br> <br>Beijing claims Taiwan as its own territory, despite having never controlled it. And it does not rule out the use of force to bring this island under <br> <br> its fold at some point. Beijing, openly lows, the ruling party, the DPP, and they`re framing this election as a stark choice between war and peace, <br> <br> prosperity and decline. <br> <br>From Taiwan`s perspective, the election will decide whether this island will continue to prioritize its relationship with the U.S. or perhaps <br> <br> recalibrate that relationship and choose to mend ties with China. Given that Taiwan is the largest source of tension between China and the U.S., <br> <br> which happens to be the Island`s main international backer and arms supplier. <br> <br>How China responds to the result of this election will be a big test. Can Beijing and D.C. manage tensions or will they move closer to confrontation <br> <br> or even conflict? Why does this matter beyond the confines of Taiwan? Well, the location, of course, it`s important strategically for both China and <br> <br> the United States being right there on the first island chain. <br> <br>Taiwan is the world`s number one manufacturer of semiconductors. Those priceless chips, that power all of our tech and the supply chain <br> <br> disruptions for any cross-rate conflict would be catastrophic around the world. And from the U.S. perspective, Taiwan is a democracy and this <br> <br> Island`s leaders have said that this election and this overall clash between China, the U.S. and Taiwan over democracy versus authoritarianism <br> <br> could actually define the future of the free world.<br> <br>(END VIDEOTAPE)<br> <br>WIRE:  Ten second trivia. <br> <br>In what year did scientists first theorize that burning fossil fuels would raise the Earth`s average temperature?<br> <br>1855, 1896, 1930 or 1964?<br> <br>If you said 1896, put your hands up. According to scientific American that`s when a Swedish scientist first argued that burning fossil fuels such <br> <br> as coal could add carbon dioxide to the atmosphere leading to a rise in Earth`s average temperature.<br> <br>2023 was the hottest year on record with the latest data showing that global warming hit 1.48 degrees Celsius. We are now extremely close to the <br> <br> warming limit that nearly 200 countries sought to avoid when the Paris agreement was signed in 2015.  Our Bill Weir explains what this latest <br> <br> report means.<br> <br>(BEGIN VIDEOTAPE)<br> <br>BILL WEIR, CNN CHIEF CLIMATE CORRESPONDENT:  2023 has a lot of people felt it around the world, just was undeniable. Not only did it break previous <br> <br> records, the hottest year ever in 2016, shattered them, obliterated them. Most Northern latitudes, you can see on the map there, up in Canada, there <br> <br> are good three and four degrees warming, warming much faster than the rest of the world. So it is not even if we look at the global surface <br> <br> temperatures going back 57 years, it goes back to 1967. My birth year, this is my life and temperature graphs here. And 2023, you can see how that bar <br> <br> on the right is so much higher than anywhere else. <br> <br>Usually these records are broken by just hundreds of a degree because you`re talking about so much area, so much mass, so much time, but `23 was, <br> <br> oh, deadly special in so many ways. And then as we look at the -- the, through the year as the temperatures bounced around that 1.5 line there, we <br> <br> dipped above in March came back down. But as you can see the temperatures around the world hit that 1.5 threshold and stayed there for most of the <br> <br> back end of the year. Even going above two degrees of global warming for a couple of days in November, that has never happened before for the first <br> <br> time ever. You can lay 2023`s calendar over a calendar of `19 or 1850 to 1900. And every day was a full degree warmer than those before.<br> <br>(END VIDEOTAPE)<br> <br>WIRE:  All right, let`s end this show on a high note, today`s story getting a 10 out of 10, a singing surgeon named Aicha N`doye, singing to her <br> <br> patients in France because she says a soothing voice can help soothe the mind.<br> <br>(BEGIN VIDEOTAPE)<br> <br>UNIDENTIFIED MALE:  At this hospital in the French city of Perdeaux, patients experience in the operating room may not be typical. Surgeon Aicha <br> <br> N`doye suits patients with singing. She started doing it as an intern and a moment of desperation.<br> <br>AICHA N`DOYE, OBSTETRIC GYNECOLOGIST (through translation):  We couldn`t get a patient to go to sleep, because she was totally agitated and wouldn`t <br> <br> let herself be perfused. And so, as I was washing my hands, I thought maybe I`d try something. The last option we had was for me to sing. Wel, I sand <br> <br> to the patient, which kind of captured her attention, so I was able to infuse her at the same time and put her to sleep. And since then, I`ve made <br> <br> it an integral part of my work. <br> <br>UNIDENTIFIED MALE:  Aicha says that she hopes to inspire other surgeons to try her technique as there are many benefits for both patients and doctors.<br> <br>N`DOYE (through translation):  When you fall asleep stressed, you consume more anesthetics. And as a result, with the singing they fall asleep more <br> <br> calmly, and consume fewer "drugs." So it`s very beneficial for them. <br> <br>What`s more, the surgeons and anesthesiologists sometimes don`t get on very well, but now we get on very well when we work together, so frankly it`s <br> <br> great, it`s a very, very good atmosphere.<br> <br>(END VIDEOTAPE)<br> <br>WIRE:  Wow, that was beautiful from singing to patience, to singing some praises, a special shout out today to a school in a city, holding a special <br> <br> place in my heart, Buffalo, New York. I lived and played there for six of my nine years in the NFL. Look at that face and look at that hair, baby. <br> <br> The Bills are your AFC East champs starting their playoff run this weekend. So we are sending a whole lot of love and positive vibes to Buffalo, New <br> <br> York, especially to City Honors School, rise up. We see you Max and Ms. Watalski (ph). And thank you, principal, Dr. Kresse. <br> <br>And this shout out goes too Syracuse-Dunbar-Avoca Middle School in Syracuse, Nebraska, keep rocking it Rockets. <br> <br>All right, I`ll be seeing you on Tuesday because of the Martin Luther King Jr. Holiday weekend. So go on out and make someone smile this weekend. <br> <br> Remember you are more powerful than you know. I`m Coy. It`s been a blessing to spend this week with you. And let go, Buffalo.<br> <br>END<br> <br></p>
+            <pre>
+COY WIRE, CNN 10 ANCHOR: What`s up superstar. Happy Friday, Friyay. I`m Coy Wire. This is CNN 10, let`s rise up, finish this week strong.
+
+We begin today with Boeing CEO, Dave Calhoun, acknowledging that his company made a mistake after an Alaska Airlines flight had to make an
+
+emergency landing last week. That flight landed shortly after takeoff from Portland, Oregon after a door plug for the Boeing 737 Max 9, actually
+
+detached and left a gaping hole on the side of the plane. Fortunately, none of the 177 passengers were seriously injured.
+
+Safety inspections are currently taking place on the grounded aircraft, but as CNN`s Ivan Rodriguez tell us questions are swirling over what mistake
+
+Boeing is actually admitting to.
+
+(BEGIN VIDEO CLIP)
+
+DAVE CALHOUN, BOEING CEO: We`re going to approach this, number one, acknowledging our mistake.
+
+IVAN RODRIGUEZ, CNN CORRESPONDENT: Boeing CEO, Dave Calhoun, acknowledging the company`s mistake on Tuesday. Following Friday`s emergency landing
+
+after a panel blew out in flight in the side of a Boeing 737 Max 9 aircraft. But according to top safety officials, it`s not clear what that
+
+mistake is.
+
+JENNIFER HOMENDY, CHAIR, U.S. NATIONAL TRANSPORTATION SAFETY BOARD: He stated that mistakes were made and I`d like to understand what mistakes
+
+he`s referring to.
+
+RODRIGUEZ: Jennifer Homendy, Chair of the NTSB says it`s imperative to find out what went wrong and why.
+
+HOMENDY: We know what broke. We need to understand how it broke.
+
+RODRIGUEZ: A Boeing company source told CNN that Boeing believes the mistake is due to, quote, "The assembly that was built up through the
+
+supply chain." This as the FAA grounded, most Boeing 737 Max 9 aircraft as officials investigate the cause of the detached door plug, an incident
+
+passengers on that flight won`t soon forget.
+
+KELLY BARTLETT, PASSENGER ON ALASKA AIRLINES 1282: It was just so scary when it happened, because you just hear that loud noise, and then the plane
+
+filled with wind and the mask dropped and it was just something you don`t want to be experiencing on flight.
+
+(END VIDEOTAPE)
+
+WIRE: Now, let`s turn to the small democratic island country of Taiwan, which will hold presidential and parliamentary elections this week. It`s an
+
+election that will be closely watched around the world, particularly by its communist neighbor, China, and even here in the United States.
+
+Now, there are a ton of specific details to this crucial election. So let`s head straight to our correspondent in the region Will Ripley, who explains
+
+why this matters to those outside Taiwan`s borders.
+
+(BEGIN VIDEOTAPE)
+
+WILL RIPLEY, CNN SENIOR INTERNATIONAL CORRESPONDENT: On Saturday, Taiwan votes for a new president term limits mean the current president sign, when
+
+has to step down after eight years in power, two presidential terms. There is a lot at stake in this election. It`s being closely watched by the
+
+Chinese Communist Party in Beijing and by U.S. lawmakers in Washington.
+
+Beijing claims Taiwan as its own territory, despite having never controlled it. And it does not rule out the use of force to bring this island under
+
+its fold at some point. Beijing, openly lows, the ruling party, the DPP, and they`re framing this election as a stark choice between war and peace,
+
+prosperity and decline.
+
+From Taiwan`s perspective, the election will decide whether this island will continue to prioritize its relationship with the U.S. or perhaps
+
+recalibrate that relationship and choose to mend ties with China. Given that Taiwan is the largest source of tension between China and the U.S.,
+
+which happens to be the Island`s main international backer and arms supplier.
+
+How China responds to the result of this election will be a big test. Can Beijing and D.C. manage tensions or will they move closer to confrontation
+
+or even conflict? Why does this matter beyond the confines of Taiwan? Well, the location, of course, it`s important strategically for both China and
+
+the United States being right there on the first island chain.
+
+Taiwan is the world`s number one manufacturer of semiconductors. Those priceless chips, that power all of our tech and the supply chain
+
+disruptions for any cross-rate conflict would be catastrophic around the world. And from the U.S. perspective, Taiwan is a democracy and this
+
+Island`s leaders have said that this election and this overall clash between China, the U.S. and Taiwan over democracy versus authoritarianism
+
+could actually define the future of the free world.
+
+(END VIDEOTAPE)
+
+WIRE: Ten second trivia.
+
+In what year did scientists first theorize that burning fossil fuels would raise the Earth`s average temperature?
+
+1855, 1896, 1930 or 1964?
+
+If you said 1896, put your hands up. According to scientific American that`s when a Swedish scientist first argued that burning fossil fuels such
+
+as coal could add carbon dioxide to the atmosphere leading to a rise in Earth`s average temperature.
+
+2023 was the hottest year on record with the latest data showing that global warming hit 1.48 degrees Celsius. We are now extremely close to the
+
+warming limit that nearly 200 countries sought to avoid when the Paris agreement was signed in 2015. Our Bill Weir explains what this latest
+
+report means.
+
+(BEGIN VIDEOTAPE)
+
+BILL WEIR, CNN CHIEF CLIMATE CORRESPONDENT: 2023 has a lot of people felt it around the world, just was undeniable. Not only did it break previous
+
+records, the hottest year ever in 2016, shattered them, obliterated them. Most Northern latitudes, you can see on the map there, up in Canada, there
+
+are good three and four degrees warming, warming much faster than the rest of the world. So it is not even if we look at the global surface
+
+temperatures going back 57 years, it goes back to 1967. My birth year, this is my life and temperature graphs here. And 2023, you can see how that bar
+
+on the right is so much higher than anywhere else.
+
+Usually these records are broken by just hundreds of a degree because you`re talking about so much area, so much mass, so much time, but `23 was,
+
+oh, deadly special in so many ways. And then as we look at the -- the, through the year as the temperatures bounced around that 1.5 line there, we
+
+dipped above in March came back down. But as you can see the temperatures around the world hit that 1.5 threshold and stayed there for most of the
+
+back end of the year. Even going above two degrees of global warming for a couple of days in November, that has never happened before for the first
+
+time ever. You can lay 2023`s calendar over a calendar of `19 or 1850 to 1900. And every day was a full degree warmer than those before.
+
+(END VIDEOTAPE)
+
+WIRE: All right, let`s end this show on a high note, today`s story getting a 10 out of 10, a singing surgeon named Aicha N`doye, singing to her
+
+patients in France because she says a soothing voice can help soothe the mind.
+
+(BEGIN VIDEOTAPE)
+
+UNIDENTIFIED MALE: At this hospital in the French city of Perdeaux, patients experience in the operating room may not be typical. Surgeon Aicha
+
+N`doye suits patients with singing. She started doing it as an intern and a moment of desperation.
+
+AICHA N`DOYE, OBSTETRIC GYNECOLOGIST (through translation): We couldn`t get a patient to go to sleep, because she was totally agitated and wouldn`t
+
+let herself be perfused. And so, as I was washing my hands, I thought maybe I`d try something. The last option we had was for me to sing. Wel, I sand
+
+to the patient, which kind of captured her attention, so I was able to infuse her at the same time and put her to sleep. And since then, I`ve made
+
+it an integral part of my work.
+
+UNIDENTIFIED MALE: Aicha says that she hopes to inspire other surgeons to try her technique as there are many benefits for both patients and doctors.
+
+N`DOYE (through translation): When you fall asleep stressed, you consume more anesthetics. And as a result, with the singing they fall asleep more
+
+calmly, and consume fewer "drugs." So it`s very beneficial for them.
+
+What`s more, the surgeons and anesthesiologists sometimes don`t get on very well, but now we get on very well when we work together, so frankly it`s
+
+great, it`s a very, very good atmosphere.
+
+(END VIDEOTAPE)
+
+WIRE: Wow, that was beautiful from singing to patience, to singing some praises, a special shout out today to a school in a city, holding a special
+
+place in my heart, Buffalo, New York. I lived and played there for six of my nine years in the NFL. Look at that face and look at that hair, baby.
+
+The Bills are your AFC East champs starting their playoff run this weekend. So we are sending a whole lot of love and positive vibes to Buffalo, New
+
+York, especially to City Honors School, rise up. We see you Max and Ms. Watalski (ph). And thank you, principal, Dr. Kresse.
+
+And this shout out goes too Syracuse-Dunbar-Avoca Middle School in Syracuse, Nebraska, keep rocking it Rockets.
+
+All right, I`ll be seeing you on Tuesday because of the Martin Luther King Jr. Holiday weekend. So go on out and make someone smile this weekend.
+
+Remember you are more powerful than you know. I`m Coy. It`s been a blessing to spend this week with you. And let go, Buffalo.
+
+            </pre>
         </p>
     </div>
 
