블로그 모양 대충 작성 textarea, youtube video insert

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </div>
 
     <div class="cnn10Video">
-        <iframe width="100%" height="395" src="https://www.youtube.com/embed/WP9UmbzZKik" title="Why Taiwan&#39;s elections matter around the world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="230" padding="10px" src="https://www.youtube.com/embed/WP9UmbzZKik" title="Why Taiwan&#39;s elections matter around the world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="cnn10Script">
-        <p>
-            <pre>
+
+        <textarea name="" id="" cols="30" rows="20">
 COY WIRE, CNN 10 ANCHOR: What`s up superstar. Happy Friday, Friyay. I`m Coy Wire. This is CNN 10, let`s rise up, finish this week strong.
 
 We begin today with Boeing CEO, Dave Calhoun, acknowledging that his company made a mistake after an Alaska Airlines flight had to make an
@@ -215,8 +215,7 @@ All right, I`ll be seeing you on Tuesday because of the Martin Luther King Jr. H
 
 Remember you are more powerful than you know. I`m Coy. It`s been a blessing to spend this week with you. And let go, Buffalo.
 
-            </pre>
-        </p>
+        </textarea>
     </div>
 
 
