--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello World!!!!</h1>
+
     <div>
         <a href="http://kosmoth.iptime.org" target="_blank">raspberryPi</a>
     </div>
@@ -21,6 +22,11 @@
 
     <div>
         <a href="https://transcripts.cnn.com/show/sn" target="_blank">cnn10 transcripts</a>
+    </div>
+
+    <div id="video-container">
+        <!-- Replace 'YOUR_YOUTUBE_VIDEO_EMBED_CODE' with the actual embed code for the latest CNN10 video -->
+        <iframe src="https://www.youtube.com/embed/CxkrwCSTn5Q" title="North Carolina schools get an AI guidebook | January 24, 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen autoplay></iframe>
     </div>
     
 </body>
