--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
     </div>
 
   </div>
+  
+  <hr>
+
+  <div>
+    <a href="https://youtube.com/cnn10" target="_blank">cnn10</a>
+  </div>
+
+  <div>
+    <a href="https://transcripts.cnn.com/show/sn" target="_blank">cnn10_script</a>
+  </div>
+
+  <div>
+    <a href="hhttp://kosmoth.iptime.org/" target="_blank">fly_my_world!!</a>
+  </div>
+
+  <div>
+    <a href="http://kosmoth.iptime.org/wp-admin" target="_blank">word_press_admin</a>
+  </div>
     
 </body>
 </html>
