--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
 
   <div>
-    <a href="hhttp://kosmoth.iptime.org/" target="_blank">fly_my_world!!</a>
+    <a href="http://kosmoth.iptime.org/" target="_blank">fly_my_world!!</a>
   </div>
 
   <div>
