--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
   <hr>
 
   <div>
+    <a href="127.0.0.1" target="_blank">local</a>
+  </div>
+
+  <div>
     <a href="https://youtube.com/cnn10" target="_blank">cnn10</a>
   </div>
 
