--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <hr>
 
   <div>
-    <a href="127.0.0.1" target="_blank">local</a>
+    <a href="https://localhost" target="_blank">local</a>
   </div>
 
   <div>
